src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Castlight_Birthdate__c</fullName>
        <label>Castlight Birthdate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Castlight_Client_Id__c</fullName>
        <label>Castlight Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Castlight_First_Name__c</fullName>
        <label>Castlight First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Castlight_Last_Name__c</fullName>
        <label>Castlight Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Castlight_Lumeris_Id__c</fullName>
        <label>Castlight Lumeris Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinic_or_Corporate_Location__c</fullName>
        <label>Clinic or Corporate Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Apple Cupertino</fullName>
                </value>
                <value>
                    <fullName>Apple Austin</fullName>
                </value>
                <value>
                    <fullName>AMAT Gloucester</fullName>
                </value>
                <value>
                    <fullName>AMAT Santa Clara</fullName>
                </value>
                <value>
                    <fullName>Facebook Menlo Park</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Near-site Mountain View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_User__c</fullName>
        <description>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</description>
        <inlineHelpText>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</inlineHelpText>
        <label>Campaign Monitor User</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Sales_Team</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Sales Team</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>